--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>CSS challenge</title>
-</head>
+  </head>
 
-<body>
+  <body class="w3-bar w3-black" class="navbar">
     <!-- NAV BAR - DON'T TOUCH ME -->
-    <div class="w3-bar w3-black">
-        <a href="/index.html" class="w3-bar-item w3-button">Home</a>
-        <a href="/challenge1/index.html" class="w3-bar-item w3-button">challenge 1</a>
-        <a href="/challenge2/index.html" class="w3-bar-item w3-button">challenge 2</a>
-        <a href="/challenge3/index.html" class="w3-bar-item w3-button">challenge 3</a>
-        <a href="/challenge4/index.html" class="w3-bar-item w3-button">challenge 4</a>
+    <div class="navbar">
+      <a href="/index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="/challenge1/index.html" class="w3-bar-item w3-button"
+        >challenge 1</a
+      >
+      <a href="/challenge2/index.html" class="w3-bar-item w3-button"
+        >challenge 2</a
+      >
+      <a href="/challenge3/index.html" class="w3-bar-item w3-button"
+        >challenge 3</a
+      >
+      <a href="/challenge4/index.html" class="w3-bar-item w3-button"
+        >challenge 4</a
+      >
     </div>
 
     <!-- YOUR CODE DOWN HERE  -->
 
-</body>
+    <div>
+      <img src="../assets/harrypotter.jpg" alt="harrypoter" />
+    </div>
 
+    <div>
+      <h1>Harry Potter and the Philosopher's Stone</h1>
+      <p>
+        Harry Potter, an eleven-year-old orphan, discovers that he is a wizard
+        and is invited to study at Hogwarts.
+      </p>
+    </div>
+  </body>
 </html>
