--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="./style.css" />
 
     <title>CSS challenge</title>
   </head>
 
-  <body class="w3-bar w3-black" class="navbar">
+  <body>
     <!-- NAV BAR - DON'T TOUCH ME -->
-    <div class="navbar">
+    <div class="w3-bar w3-black">
       <a href="/index.html" class="w3-bar-item w3-button">Home</a>
       <a href="/challenge1/index.html" class="w3-bar-item w3-button"
         >challenge 1</a
@@ -29,11 +30,11 @@
 
     <!-- YOUR CODE DOWN HERE  -->
 
-    <div>
-      <img src="../assets/harrypotter.jpg" alt="harrypoter" />
+    <div class="card">
+      <img class="img-card" src="../assets/harrypotter.jpg" alt="harrypoter" />
     </div>
 
-    <div>
+    <div class="card">
       <h1>Harry Potter and the Philosopher's Stone</h1>
       <p>
         Harry Potter, an eleven-year-old orphan, discovers that he is a wizard
