--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -10,7 +10,7 @@
     <title>CSS challenge</title>
   </head>
 
-  <body>
+  <body class="card">
     <!-- NAV BAR - DON'T TOUCH ME -->
     <div class="w3-bar w3-black">
       <a href="/index.html" class="w3-bar-item w3-button">Home</a>
@@ -30,11 +30,11 @@
 
     <!-- YOUR CODE DOWN HERE  -->
 
-    <div class="card">
+    <div>
       <img class="img-card" src="../assets/harrypotter.jpg" alt="harrypoter" />
     </div>
 
-    <div class="card">
+    <div>
       <h1>Harry Potter and the Philosopher's Stone</h1>
       <p>
         Harry Potter, an eleven-year-old orphan, discovers that he is a wizard
