--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -13,17 +13,23 @@
   <body class="card">
     <!-- NAV BAR - DON'T TOUCH ME -->
     <div class="w3-bar w3-black">
-      <a href="/index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="/challenge1/index.html" class="w3-bar-item w3-button"
-        >challenge 1</a
+      <a href="/TASK-css-challenge/index.html" class="w3-bar-item w3-button"
+        >Home</a
       >
-      <a href="/challenge2/index.html" class="w3-bar-item w3-button"
+      <a href="./index.html" class="w3-bar-item w3-button">challenge 1</a>
+      <a
+        href="/TASK-css-challenge/challenge2/index.html"
+        class="w3-bar-item w3-button"
         >challenge 2</a
       >
-      <a href="/challenge3/index.html" class="w3-bar-item w3-button"
+      <a
+        href="/TASK-css-challenge/challenge3/index.html"
+        class="w3-bar-item w3-button"
         >challenge 3</a
       >
-      <a href="/challenge4/index.html" class="w3-bar-item w3-button"
+      <a
+        href="/TASK-css-challenge/challenge4/index.html"
+        class="w3-bar-item w3-button"
         >challenge 4</a
       >
     </div>
