--- a/challenge2/index.html
+++ b/challenge2/index.html
@@ -12,7 +12,9 @@
   <body class="bg-">
     <!-- NAV BAR - DON'T TOUCH ME -->
     <div class="w3-bar w3-black">
-      <a href="/index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="/TASK-css-challenge/index.html" class="w3-bar-item w3-button"
+        >Home</a
+      >
       <a
         href="/TASK-css-challenge/challenge1/index.html"
         class="w3-bar-item w3-button"
